--- a/style.css
+++ b/style.css
@@ -8,11 +8,52 @@ body {
     background-color: black;
 }
 
+.mqr {
+    margin-top: 1%;
+    font-family: 'Source Serif Pro', serif;
+    color: white;
+    text-align: center;
+    border-bottom: 1px solid #f0f0eb;
+}
+
 h1 {
     margin-top: 1%;
     font-family: 'Source Serif Pro', serif;
     color: white;
     text-align: center;
+}
+
+.mqr__sub{
+    color: #f0f0eb;
+    text-align: center;
+    margin: 5%;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+}
+
+h3 {
+    color: #f0f0eb;
+    text-align: start;
+    margin: 5%;
+}
+
+.prop {
+    font-family: 'Bitter', serif;
+    color: white;
+    margin: 5%;
+    text-indent: 15px;
+    letter-spacing: -0.02rem;
+}
+
+.ofer {
+    margin: 5%;
+    display: flex;
+    flex-direction: column;
+}
+
+.lista {
+    margin: 2% 5%;
+    color: white;
 }
 
 nav {
@@ -25,14 +66,14 @@ nav {
     z-index: 1;
 }
 
-ul {
+.nav {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 2%;
 }
 
-li {
+.nav__bar {
     background-color: black;
     font-family: 'Bitter', serif;
     font-size: 1.875rem;
@@ -160,13 +201,17 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 9vh;
+    height: 8vh;
 }
 
 .redes {
     display: flex;
     flex-direction: column;
     width: 45%;
+    align-items: center;
+}
+
+.redes a {
     align-items: center;
 }
 
@@ -188,6 +233,7 @@ h6 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
     color: white;
-    letter-spacing: 0.18rem;
+    letter-spacing: 0.1rem;
+    text-align: center;
 }
 
