--- a/style.css
+++ b/style.css
@@ -8,12 +8,17 @@ body {
     background-color: black;
 }
 
+.contenedor0 {
+    background-color: #4158D0;
+background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+
+}
 .mqr {
+    background-color: #000;
     margin-top: 1%;
     font-family: 'Source Serif Pro', serif;
     color: white;
     text-align: center;
-    border-bottom: 1px solid #f0f0eb;
 }
 
 h1 {
@@ -24,6 +29,7 @@ h1 {
 }
 
 .mqr__sub{
+    font-family: 'Source Serif Pro', serif;
     color: #f0f0eb;
     text-align: center;
     margin: 5%;
@@ -32,13 +38,18 @@ h1 {
 }
 
 h3 {
+    font-family: 'Source Serif Pro', serif;
+    font-size: larger;
+    font-variant: small-caps;
     color: #f0f0eb;
     text-align: start;
+    letter-spacing: 0.2rem;
     margin: 5%;
 }
 
 .prop {
     font-family: 'Bitter', serif;
+    font-size: larger;
     color: white;
     margin: 5%;
     text-indent: 15px;
@@ -52,10 +63,15 @@ h3 {
 }
 
 .lista {
+    font-family: 'Bitter', serif;
+    font-size: larger;
     margin: 2% 5%;
     color: white;
 }
 
+span {
+    color: rgb(164, 163, 228);
+}
 nav {
     background-color: black;
     display: flex;
