--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
     font-family: 'Source Serif Pro', serif;
     color: white;
     text-align: center;
+    text-shadow: 0px 0px 3px rgb(160, 123, 123);
 }
 
 h1 {
@@ -30,21 +31,34 @@ h1 {
 
 .mqr__sub{
     font-family: 'Source Serif Pro', serif;
-    color: #f0f0eb;
+    color: #000000;
     text-align: center;
     margin: 5%;
     text-transform: uppercase;
     letter-spacing: 0.1rem;
 }
 
+.ej {
+    font-family: 'Source Serif Pro', serif;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: #000000;
+    text-align: center;
+    letter-spacing: 0.16rem;
+    margin: 5%;
+    text-shadow: 0px 0px 4px #000;
+
+}
+
 h3 {
     font-family: 'Source Serif Pro', serif;
     font-size: larger;
     font-variant: small-caps;
-    color: #f0f0eb;
+    color: #000000;
     text-align: start;
     letter-spacing: 0.2rem;
     margin: 5%;
+    text-shadow: 0px 0px 1px #000;
 }
 
 .prop {
@@ -54,6 +68,7 @@ h3 {
     margin: 5%;
     text-indent: 15px;
     letter-spacing: -0.02rem;
+    text-shadow: 0px 0px 4px #000;
 }
 
 .ofer {
@@ -67,6 +82,7 @@ h3 {
     font-size: larger;
     margin: 2% 5%;
     color: white;
+    text-shadow: 0px 0px 4px #000;
 }
 
 span {
