--- a/style.css
+++ b/style.css
@@ -14,14 +14,15 @@ body {
 
 }
 .mqr {
-    color: #c7cce7;
+    color: #ffffff;
     background-color: #000;
     margin: 2% 0%;
     font-family: 'Bitter', serif;
     font-weight: 400;
     font-size: 40px;
     text-align: center;
-    text-shadow: 0px 0px 2px rgb(255, 255, 255);
+    
+    text-shadow: 0px 0px 1px rgb(255, 255, 255);
 }
 
 
@@ -36,6 +37,7 @@ h1 {
     text-transform: uppercase;
     letter-spacing: 0.1rem;
     text-align: center;
+    font-size: 20px;
 }
 
 h3 {
@@ -51,13 +53,14 @@ h3 {
 
 .ej {
     font-family: 'Source Serif Pro', serif;
-    font-size: 40px;
+    font-size: 50px;
     text-transform: uppercase;
     color: #000000;
     text-align: center;
     letter-spacing: 0.16rem;
     margin: 5%;
-    text-shadow: 0px 0px 2px rgb(255, 255, 255);
+    text-shadow: 0px 0px 1px rgb(255, 255, 255);
+    -webkit-text-stroke: 0.2px rgb(255, 255, 255);
 
 }
 
@@ -67,7 +70,7 @@ h3 {
     color: white;
     margin: 5%;
     text-indent: 15px;
-    letter-spacing: -0.02rem;
+    letter-spacing: -0.01rem;
     text-shadow: 0px 0px 2px rgb(0, 0, 0);
 }
 
