--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
     font-weight: 400;
     font-size: 40px;
     text-align: center;
-    
     text-shadow: 0px 0px 1px rgb(255, 255, 255);
 }
 
@@ -52,15 +51,15 @@ h3 {
 }
 
 .ej {
-    font-family: 'Source Serif Pro', serif;
-    font-size: 50px;
+    font-family: 'Bitter', serif;
+    font-size: 30px;
+    font-weight: 400;
     text-transform: uppercase;
-    color: #000000;
+    color: #dab38f;
     text-align: center;
-    letter-spacing: 0.16rem;
-    margin: 5%;
-    text-shadow: 0px 0px 1px rgb(255, 255, 255);
-    -webkit-text-stroke: 0.2px rgb(255, 255, 255);
+    letter-spacing: 0.1rem;
+    margin: 20% 1%;
+    text-shadow: 0px 0px 2px rgb(0, 0, 0);
 
 }
 
